syntax = "proto3";
package ClassIsland.Shared.Protobuf.Command;
option csharp_namespace = "ClassIsland.Shared.Protobuf.Command";

message SendNotification {
  string MessageMask=1;
  string MessageContent=2;
  int32 OverlayIconLeft=3;
  int32 OverlayIconRight=4;
  bool IsEmergency=5;
  // 提醒设置
  bool IsSpeechEnabled=6;
  bool IsEffectEnabled=7;
  bool IsSoundEnabled=8;
  bool IsTopmost=9;
  // 显示设置
  double DurationSeconds=10;  // 单次显示持续时间
  int32 RepeatCounts=11;
}
